--- a/angularpage.html
+++ b/angularpage.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Angular записки</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>Angular Notes</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<a href="index.html"><button class="button"><i class="fa fa-home"></i> Home</button></a>
 </head>
-
 <body>
-<h1 id="top">Angular записки</h1>
+	<header>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<a href="index.html"><button class="button"><i class="fa fa-home"></i> Home</button></a>
+<!-- ось робочий варіант, без помилок (але тоді без значка):
+	<a href="index.html" class="button">Home</a> -->
+	</header>
+<h1 id="top">Angular Notes</h1>
 
 				<a href="htmlpage.html" class="message html">HTML</a>
 				<a href="csspage.html" class="message css">CSS</a>
@@ -64,9 +67,9 @@
  
 </body>
 <footer><hr>
-<i> Пробний варіант. Матеріали будуть доповнюватись.
+<i> Test realese
 </i>
-<p>&copy; 2019 Василь Габалевич
+<p>&copy; 2019 Vasyl Habalevych
 	
 </p>
 </footer>
