--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<title>Записки юного веб-падавана</title>
+	<title>A Young Web Padawan's Notebook</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<a href="index.html"><button class="button"><i class="fa fa-home"></i> Home</button></a>
 	</head>
 	<body>
-
-		<h1>Записки юного веб-падавана</h1>
+		<header>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<a href="index.html"><button class="button"><i class="fa fa-home"></i> Home</button></a>
+<!-- ось робочий варіант, без помилок (але тоді без значка):
+	<a href="index.html" class="button">Home</a> -->
+</header>
+		<h1>A Young Web Padawan's Notebook</h1>
 
 			    <a href="htmlpage.html" class="message html">HTML</a>
 				<a href="csspage.html" class="message css">CSS</a>
@@ -19,7 +22,7 @@
 	
        
 	
-	<h3>Корисні матеріали</h3>
+	<h3>Useful Resources, Tools & Services</h3>
 
 	<p class="imgsign">
 		<img src="images/soft.jpg" alt="Soft Skills" width="300" height="375">
@@ -36,12 +39,12 @@
     	<a class="link" href="https://git-scm.com/book/uk/v2">Pro Git book</a>
 </p>
   
-	<h4>Зворотня форма</h4>
+	<h4>Contact Form</h4>
 <form>
-  <p><b>Ваше ім'я:</b><br>
+  <p><b>Name</b><br>
    <input type="text" name="name" size="40">
   </p>
-  <p><b>Ви маєте ціль освоїти:</b><br>
+  <p><b>Want to learn</b><br>
      <select name="technology">
 			<option>HTML</option>
 			<option>CSS</option>
@@ -50,21 +53,21 @@
 			<option>React</option>
 		</select><br>
 		</p>
-  <p><b>Ваша улюблена ОС:</b><br>
+  <p><b>Favorite OS:</b><br>
    <input type="radio" name="os" value="macos">MacOS<br>
-   <input type="radio" name="os" value="windows">Winsows<br>
+   <input type="radio" name="os" value="windows">Windows<br>
    <input type="radio" name="os" value="linux">Linux<br>
   </p>
-  <p>Коментар:<Br>
+  <p>Сomments<Br>
    <textarea name="comment" cols="40" rows="3"></textarea></p>
-  <p><input type="submit" value="Відправити">
-   <input type="reset" value="Очистити"></p>
+  <p><input type="submit" value="Send">
+   <input type="reset" value="Clear"></p>
  </form>
 
 <footer><hr>
-<i> Пробний варіант. Матеріали будуть доповнюватись.
+<i> Test realese
 </i>
-<p>&copy; 2019 Василь Габалевич
+<p>&copy; 2019 Vasyl Habalevych
 	
 </p>
 </footer>
