--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- ось робочий варіант, без помилок (але тоді без значка):
 	<a href="index.html" class="button">Home</a> -->
 </header>
-		<h1>A Young Web Padawan's Notebook</h1>
+		<h1 id="main" >A Young Web Padawan's Notebook</h1>
 
 			    <a href="htmlpage.html" class="message html">HTML</a>
 				<a href="csspage.html" class="message css">CSS</a>
@@ -24,19 +24,18 @@
 	
 	<h3>Useful Resources, Tools & Services</h3>
 
-	<p class="imgsign">
-		<img src="images/soft.jpg" alt="Soft Skills" width="300" height="375">
-		<a class="link" href="https://www.manning.com/books/soft-skills#toc">Soft Skills - The software developer's life manual. </a>
-	
+	<p>
 		
+		<a href="https://www.manning.com/books/soft-skills#toc"><img src="images/soft.jpeg" alt="Soft Skills" width="300" height="375"></a><span class="imgsign">Soft Skills - The software developer's life manual.</span>
+	
 </p>
 
-   <p class="imgsign"> <img src="images/design.jpg" alt="HTML and CSS: Design and Build Websites" width="300" height="375">
-    	<a class="link" href="https://www.amazon.com/HTML-CSS-Design-Build-Websites/dp/1118871642/?tag=coursera-web-dev-20">HTML and CSS: Design and Build Websites</a>
+   <p> 
+    	<a href="https://www.amazon.com/HTML-CSS-Design-Build-Websites/dp/1118871642/?tag=coursera-web-dev-20"><img src="images/design.jpg" alt="HTML and CSS: Design and Build Websites" width="300" height="375"></a><span class="imgsign">HTML and CSS: Design and Build Websites</span>
 </p>
 
-<p class="imgsign"><img src="images/git.png" alt="Git book" width="300" height="375">
-    	<a class="link" href="https://git-scm.com/book/uk/v2">Pro Git book</a>
+<p>
+    	<a href="https://git-scm.com/book/uk/v2"><img src="images/git.png" alt="Git book" width="300" height="375"></a><span class="imgsign">Pro Git book</span>
 </p>
   
 	<h4>Contact Form</h4>
