--- a/htmlpage.html
+++ b/htmlpage.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body  id="top">
 	<header>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<a href="index.html"><button class="button"><i class="fa fa-home"></i> Home</button></a>
 <!-- ось робочий варіант, без помилок (але тоді без значка):
 	<a href="index.html" class="button">Home</a> -->
 </header>
-<h1 id="top" >HTML Notes</h1>
+<h1>HTML Notes</h1>
 
 				<a href="htmlpage.html" class="message html htmlpage">HTML</a>
 				<a href="csspage.html" class="message css">CSS</a>
@@ -23,7 +23,7 @@
 
  <h2>Most commonly used tags in HTML</h2>
 
-         <table class="table">
+         <table>
 
 			<tr><td><b>№</b></td><td><b>Tags</b></td><td><b>Attributes</b> </td></tr>
 
