--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
    <input type="radio" name="os" value="linux">Linux<br>
   </p>
   <p>Сomments<Br>
-   <textarea name="comment" cols="40" rows="3"></textarea></p>
+      <textarea name="comment" cols="40" rows="3"></textarea></Br></p>
   <p><input type="submit" value="Send">
    <input type="reset" value="Clear"></p>
  </form>
